Fix for v scrollbar appearing on stretched bannerviewlet

--- a/jowent/bannerviewlet/resources/bannerviewlet.css
+++ b/jowent/bannerviewlet/resources/bannerviewlet.css
@@ -7,6 +7,9 @@
   margin:     0 auto 10px;
 }
 
+#banner-viewlet .cycle-slideshow {
+  overflow: hidden;
+}
 #banner-viewlet .banner-centred {
   display:              block;
   background-position:  center top;
